# anatel-data-platform

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  test_logger.py
docs/: CHANGELOG.md  ROADMAP.md
docs/decisions/: ADR-001.md
src/anatel/: py.txt
src/anatel/core/: config.py  exceptions.py  logger.py
tests/: test_config.py  test_exceptions.py
